--- a/Resources/Prototypes/Magic/white.yml
+++ b/Resources/Prototypes/Magic/white.yml
@@ -417,3 +417,20 @@
         state: blind
       event: !type:BlindSpellEvent
         speech: "STI KALY!"
+
+- type: entity
+  id: ActionMutateSpell
+  name: Mutate
+  noSpawn: true
+  components:
+  - type: Magic
+    requiresClothes: true
+  - type: InstantAction
+    useDelay: 120
+    itemIconStyle: BigAction
+    checkCanInteract: false
+    icon:
+      sprite: Objects/Magic/magicactions.rsi
+      state: mutate
+    event: !type:MutateSpellEvent
+      speech: "BIRUZ BENNAR!!"
