--- a/Resources/Prototypes/Procedural/salvage_loot.yml
+++ b/Resources/Prototypes/Procedural/salvage_loot.yml
@@ -200,7 +200,7 @@
           cost: 3
         - proto: LaserModule
           cost: 8
-        - proto: HolographicSightModule
+        - proto: HolograpicSightModule
           cost: 8
         - proto: FlameHiderModule
           cost: 3
