--- a/Resources/Prototypes/Loadouts/Jobs/common.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/common.yml
@@ -537,6 +537,14 @@
     underwearb: ClothingUnderwearBottomPantiesCMO
 
 - type: itemLoadout # WD
+  id: CMOPanties
+  equipment: CMOPanties
+- type: startingGear
+  id: CMOPanties
+  equipment:
+    underwearb: ClothingUnderwearBottomPantiesCMO
+
+- type: itemLoadout # WD
   id: HOPBoxers
   equipment: HOPBoxers
 - type: startingGear
