--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -683,6 +683,7 @@
     preinstalled:
       - CrewManifestCartridge
       - NotekeeperCartridge
+      - MessagesCartridge
       - NewsReaderCartridge
       - LogProbeCartridge
 
