--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -2151,11 +2151,26 @@
 
 # Maid
 - type: loadoutGroup # WD
+  id: MaidSelfDefenceDevices
+  name: loadout-group-self-defence-devices
+  minLimit: 0
+  maxLimit: 1
+  loadouts:
+  - Flash
+
+- type: loadoutGroup # WD
   id: MaidGlasses
   name: loadout-group-eyes
   minLimit: 0
   loadouts:
   - MaidGlasses
+
+- type: loadoutGroup # WD
+  id: MaidHead
+  name: loadout-group-head
+  minLimit: 0
+  loadouts:
+  - MaidHeadMobCap
 
 - type: loadoutGroup # WD
   id: MaidJumpsuit
@@ -2205,6 +2220,16 @@
   name: loadout-group-jumpsuit
   loadouts:
   - BomzhJumpsuit
+
+- type: loadoutGroup # WD
+  id: BomzhHead
+  name: loadout-group-head
+  minLimit: 0
+  maxLimit: 1
+  loadouts:
+  - BomzhHeadHat
+  - BomzhHeadCap
+  - BomzhHeadHatMelon
 
 - type: loadoutGroup # WD
   id: BomzhPDA
