--- a/Resources/Prototypes/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/Loadouts/role_loadouts.yml
@@ -538,11 +538,10 @@
   - BrigmedicUniform
   - BrigmedicBackpack
   - BrigmedicOuterClothing
-  - BrigmedicGloves
+  - CommonMedicalGloves
   - BrigmedicShoes
-  - BrigmedicMask
+  - CommonMedicalMask
   - BrigmedicPDA
-  - CommonSecurityJobTrinkets # WD
   - Trinkets
   - CommonUnderwearBottom
   - CommonUnderwearBra
