--- a/Resources/Prototypes/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Roles/Jobs/departments.yml
@@ -27,10 +27,10 @@
   roles:
   - HeadOfSecurity
   - Warden
-  - Brigmedic
   - SeniorOfficer
   - SecurityOfficer
   - Detective
+  - - Brigmedic
   - SecurityCadet
   buttonStyle: ButtonColorSecurityDepartment
 
