--- a/Resources/Prototypes/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Roles/Jobs/departments.yml
@@ -30,7 +30,7 @@
   - SeniorOfficer
   - SecurityOfficer
   - Detective
-  - - Brigmedic
+  - Brigmedic
   - SecurityCadet
   buttonStyle: ButtonColorSecurityDepartment
 
