--- a/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
@@ -98,6 +98,8 @@
       - id: MedkitFilled
       - id: MedkitOxygenFilled
         prob: 0.3
+      - id: ClothingOuterHardsuitBrigmedic
+        prob: 0.5
       - id: MedkitBruteFilled
         prob: 0.3
       - id: MedkitToxinFilled
