--- a/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
@@ -95,7 +95,10 @@
       - id: ClothingEyesHudMedSec
       - id: ClothingHandsGlovesNitrile
       - id: ClothingBeltMedicalRig
+      - id: ClothingOuterHardsuitBrigmedic
+        prob: 0.5
       - id: MedkitFilled
+        prob: 0.3
       - id: MedkitOxygenFilled
         prob: 0.3
       - id: MedkitBruteFilled
