--- a/Resources/Prototypes/Catalog/Fills/Lockers/suit_storage.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/suit_storage.yml
@@ -156,6 +156,8 @@
     - id: NitrogenTankFilled
     - id: ClothingOuterHardsuitBrigmedic
     - id: ClothingMaskBreathMedicalSecurity
+  - type: AccessReader
+    access: [["Medical"]]
 
 #CE's hardsuit
 - type: entity
