--- a/Resources/Prototypes/SoundCollections/deathgasp.yml
+++ b/Resources/Prototypes/SoundCollections/deathgasp.yml
@@ -21,3 +21,17 @@
   files:
   - /Audio/Effects/Gasp/deathgasp_1.ogg
   - /Audio/Effects/Gasp/deathgasp_2.ogg
+
+- type: soundCollection
+  id: HarpyDeathGasp
+  files:
+  - /Audio/Effects/Gasp/male_deathgasp_1.ogg
+  - /Audio/Effects/Gasp/male_deathgasp_2.ogg
+  - /Audio/Effects/Gasp/male_deathgasp_3.ogg
+  - /Audio/Effects/Gasp/male_deathgasp_4.ogg
+  - /Audio/Effects/Gasp/male_deathgasp_5.ogg
+  - /Audio/Effects/Gasp/female_deathgasp_1.ogg
+  - /Audio/Effects/Gasp/female_deathgasp_2.ogg
+  - /Audio/Effects/Gasp/female_deathgasp_3.ogg
+  - /Audio/Effects/Gasp/female_deathgasp_4.ogg
+  - /Audio/Effects/Gasp/female_deathgasp_5.ogg
