Tweak: Sec statuses update WIP

--- a/Resources/Prototypes/_White/sechud.yml
+++ b/Resources/Prototypes/_White/sechud.yml
@@ -8,11 +8,15 @@
     access: [["Security"]]
   - type: SecurityHud
     criminalrecords:
-    - SecurityIconDischarged
+    - SecurityIconDemote  # WD start
     - SecurityIconParoled
     - SecurityIconSuspected
     - SecurityIconWanted
     - SecurityIconIncarcerated
+    - SecurityIconExecute
+    - SecurityIconMonitoring
+    - SecurityIconSearch
+    - SecurityIconReleased # WD end
     - CriminalRecordIconRemove
   - type: UserInterface
     interfaces:
