--- a/Resources/Prototypes/Entities/Structures/Walls/grille.yml
+++ b/Resources/Prototypes/Entities/Structures/Walls/grille.yml
@@ -16,6 +16,7 @@
     - type: Tag
       tags:
         - DeleteWithWindows
+        - GravityWellAllowStatic # WD
     - type: CanBuildWindowOnTop
     - type: Sprite
       drawdepth: Walls
