--- a/Resources/Prototypes/Entities/Structures/Lighting/base_lighting.yml
+++ b/Resources/Prototypes/Entities/Structures/Lighting/base_lighting.yml
@@ -10,6 +10,7 @@
   description: "An always powered light."
   suffix: Always powered
   components:
+  - type: LightingOverlay
   - type: MeleeSound
     soundGroups:
       Brute:
