--- a/Resources/Prototypes/_White/Ghosts/custom_ghosts.yml
+++ b/Resources/Prototypes/_White/Ghosts/custom_ghosts.yml
@@ -462,5 +462,5 @@
   ckey: Devf_2
   sprite: White/Ghosts/devf_2-ghost.rsi
   alpha: 0.9
-  ghostName: Жопа
-  ghostDescription: Хуй
+  ghostName: Devf_2
+  ghostDescription: Aladeen mazafaka
